==> ErichStyger/mcuoneclipse/Examples/KDS/FRDM-KL25Z/FRDM-KL25Z_BusPal/bootloader/apps/bus_pal/MKL25Z4/src/bus_pal_hardware.c <==
#include "bus_pal_hardware.h"
#include "fpga_clock_registers.h"
#include "fsl_device_registers.h"
#include "i2c/fsl_i2c.h"
#include "microseconds/microseconds.h"
#include "spi/fsl_spi.h"
#include "lpsci/fsl_lpsci.h"

void init_hardware(void)
{
    /* SIM->SCGC5: PORTA=1 */
    SIM->SCGC5 |= (uint32_t)0x0200UL;      /* Enable clock gate for ports to enable pin routing */
                                           /* SIM->CLKDIV1:
                                            * OUTDIV1=1,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,OUTDIV4=1,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0,??=0
                                            */
    SIM->CLKDIV1 = (uint32_t)0x10010000UL; /* Update system prescalers */
    /* PORTA->PCR18: ISF=0,MUX=0 */
    PORTA->PCR[18] &= (uint32_t)~0x01000700UL;
    /* PORTA->PCR19: ISF=0,MUX=0 */
    PORTA->PCR[19] &= (uint32_t)~0x01000700UL;
    /* Switch to FBE Mode */
    /* OSC0->CR: ERCLKEN=1,??=0,EREFSTEN=0,??=0,SC2P=1,SC4P=0,SC8P=0,SC16P=1 */
    OSC0->CR = (uint8_t)0x89U;
    /* MCG->C2: LOCRE0=0,??=0,RANGE0=2,HGO0=0,EREFS0=1,LP=0,IRCS=0 */
    MCG->C2 = (uint8_t)0x24U;
    /* MCG->C1: CLKS=2,FRDIV=3,IREFS=0,IRCLKEN=1,IREFSTEN=0 */
    MCG->C1 = (uint8_t)0x9AU;
    /* MCG->C4: DMX32=0,DRST_DRS=0 */
    MCG->C4 &= (uint8_t) ~(uint8_t)0xE0U;
    /* MCG->C5: ??=0,PLLCLKEN0=0,PLLSTEN0=0,PRDIV0=1 */
    MCG->C5 = (uint8_t)0x01U;
    /* MCG->C6: LOLIE0=0,PLLS=0,CME0=0,VDIV0=0 */
    MCG->C6 = (uint8_t)0x00U;
    while ((MCG->S & MCG_S_IREFST_MASK) != 0x00U)
    { /* Check that the source of the FLL reference clock is the external reference clock. */
    }
    while ((MCG->S & 0x0CU) != 0x08U)
    { /* Wait until external reference clock is selected as MCG output */
    }
    /* Switch to PBE Mode */
    /* MCG->C6: LOLIE0=0,PLLS=1,CME0=0,VDIV0=0 */
    MCG->C6 = (uint8_t)0x40U;
    while ((MCG->S & 0x0CU) != 0x08U)
    { /* Wait until external reference clock is selected as MCG output */
    }
    while ((MCG->S & MCG_S_LOCK0_MASK) == 0x00U)
    { /* Wait until locked */
    }
    /* Switch to PEE Mode */
    /* MCG->C1: CLKS=0,FRDIV=3,IREFS=0,IRCLKEN=1,IREFSTEN=0 */
    MCG->C1 = (uint8_t)0x1AU;
    while ((MCG->S & 0x0CU) != 0x0CU)
    { /* Wait until output of the PLL is selected */
    }

    SIM->SCGC5 |= (SIM_SCGC5_PORTA_MASK | SIM_SCGC5_PORTB_MASK | SIM_SCGC5_PORTC_MASK | SIM_SCGC5_PORTD_MASK |
                   SIM_SCGC5_PORTE_MASK);

    SIM->SOPT2 |= SIM_SOPT2_PLLFLLSEL_MASK // set PLLFLLSEL to select the PLL for this clock source
                  | SIM_SOPT2_UART0SRC(1); // select the PLLFLLCLK as UART0 clock source

    // Enable the pins for the selected UART
    // Enable the UART_TXD function on PTA1
    PORTA->PCR[1] = PORT_PCR_MUX(0x2);
    // Enable the UART_TXD function on PTA2
    PORTA->PCR[2] = PORT_PCR_MUX(0x2);

    // Enable pins for UART1.
    PORTC->PCR[3] = PORT_PCR_MUX(3); // UART1_RX is ALT3 for pin PTC3
    PORTC->PCR[4] = PORT_PCR_MUX(3); // UART1_TX is ALT3 for pin PTC4

    // Enable pins for I2C0.
    PORTC->PCR[8] = PORT_PCR_MUX(2); // I2C0_SCL is ALT2 for pin PTC8
    PORTC->PCR[9] = PORT_PCR_MUX(2); // I2C0_SDA is ALT2 for pin PTC9

    // Enable pins for I2C1.
    PORTE->PCR[0] = PORT_PCR_MUX(6); // I2C1_SDA is ALT6 for pin PTE0
    PORTE->PCR[1] = PORT_PCR_MUX(6); // I2C1_SCL is ALT6 for pin PTE1

    // Enable pins for SPI0 on PTD0~3 (not available on 32-pin QFN package)
    PORTD->PCR[0] = PORT_PCR_MUX(2); // SPI0_PCS0 is ALT2 for pin PTD0
    PORTD->PCR[1] = PORT_PCR_MUX(2); // SPI0_SCK is ALT2 for pin PTD1
    PORTD->PCR[2] = PORT_PCR_MUX(2); // SPI0_MOSI is ALT2 for pin PTD2
    PORTD->PCR[3] = PORT_PCR_MUX(2); // SPI0_MISO is ALT2 for pin PTD3

    // Ungate clocks to the UART modules
    SIM->SCGC4 |= (SIM_SCGC4_UART0_MASK | SIM_SCGC4_UART1_MASK | SIM_SCGC4_UART2_MASK);

    microseconds_init();

    init_uarts();
    init_spi();
    init_i2c(0);
    init_i2c(1);
}

void init_spi(void)
{
    spi_master_config_t config;
    uint32_t baseAddr = g_spiBaseAddr[0];

    SPI_MasterGetDefaultConfig(&config);

    config.polarity = s_spiUserConfig.polarity;
    config.phase = s_spiUserConfig.phase;
    config.baudRate_Bps = s_spiUserConfig.baudRate_Bps;
    s_spiUserConfig.clock_Hz = get_bus_clock();

    SPI_MasterInit((SPI_Type *)baseAddr, &config, s_spiUserConfig.clock_Hz);
    SPI_MasterTransferCreateHandle((SPI_Type *)baseAddr, &s_spiHandle, NULL, NULL);
}

void init_i2c(uint32_t instance)
{
    uint32_t baseAddr = g_i2cBaseAddr[instance];
    i2c_master_config_t config;

    I2C_MasterGetDefaultConfig(&config);

    I2C_MasterInit((I2C_Type *)baseAddr, &config, get_bus_clock());
    I2C_MasterTransferCreateHandle((I2C_Type *)baseAddr, &s_i2cHandle, NULL, NULL);
}

void deinit_i2c(uint32_t instance)
{
    uint32_t baseAddr = g_i2cBaseAddr[instance];
    I2C_MasterDeinit((I2C_Type *)baseAddr);
}

void write_bytes_to_host(uint8_t *src, uint32_t length)
{
    uint32_t baseAddr = g_lpsciBaseAddr[0];

    LPSCI_TransferSendBlocking((UART0_Type *)baseAddr, src, length);
}

void send_spi_data(uint8_t *src, uint32_t writeLength)
{
    spi_transfer_t send_data;
    uint32_t baseAddr = g_spiBaseAddr[0];

    send_data.txData = src;
    send_data.dataSize = writeLength;
    send_data.rxData = NULL;
    SPI_MasterTransferBlocking((SPI_Type *)baseAddr, &send_data);
}

void receive_spi_data(uint8_t *dest, uint32_t readLength)
{
    spi_transfer_t receive_data;
    uint32_t baseAddr = g_spiBaseAddr[0];

    receive_data.rxData = dest;
    receive_data.dataSize = readLength;
    receive_data.txData = NULL;
    SPI_MasterTransferBlocking((SPI_Type *)baseAddr, &receive_data);
}

void configure_spi_settings(spi_clock_polarity_t polarity, spi_clock_phase_t phase, spi_shift_direction_t direction)
{
    s_spiUserConfig.polarity = polarity;
    s_spiUserConfig.phase = phase;
    s_spiUserConfig.direction = direction;
}

status_t send_i2c_data(uint8_t *src, uint32_t writeLength)
{
    i2c_master_transfer_t send_data;
    uint32_t baseAddr = g_i2cBaseAddr[0];
    send_data.slaveAddress = s_i2cUserConfig.slaveAddress;
    send_data.direction = kI2C_Write;
    send_data.data = src;
    send_data.dataSize = writeLength;

    if (I2C_MasterTransferBlocking((I2C_Type *)baseAddr, &send_data) != kStatus_Success)
    {
        deinit_i2c(0);
        init_i2c(0);
        return kStatus_Fail;
    }

    return kStatus_Success;
}

status_t receive_i2c_data(uint8_t *dest, uint32_t readLength)
{
    i2c_master_transfer_t receive_data;
    uint32_t baseAddr = g_i2cBaseAddr[0];
    receive_data.slaveAddress = s_i2cUserConfig.slaveAddress;
    receive_data.direction = kI2C_Read;
    receive_data.data = dest;
    receive_data.dataSize = readLength;

    if (I2C_MasterTransferBlocking((I2C_Type *)baseAddr, &receive_data) != kStatus_Success)
    {
        deinit_i2c(0);
        init_i2c(0);
        return kStatus_Fail;
    }

    return kStatus_Success;
}
