==> nxp-appcodehub/ap-frdm-mcx-buspal/frdmmcxa156_Buspal/source/bus_pal_hardware.c <==
#include "bus_pal_hardware.h"

void init_hardware(void)
{
	/* Start the microseconds timer (SysTick). This must be done before any
	 * code relies on microseconds_get_ticks(), for example the CAN receive
	 * timeout in read_can_data(). Without it SysTick never runs, the tick
	 * value never changes, and the CAN read loop can never time out, which
	 * causes the firmware to hang when the slave does not reply. */
	microseconds_init();

	/* Init peripherals*/
	init_uart(UART_HOST);
	init_spi(LPSPI_INSTANCE);
	init_i2c(I2C_INSTANCE);
	init_flexcan(FLEXCAN_INSTANCE);

}

void write_bytes_to_host(uint8_t * src, uint32_t lenght)
{
	LPUART_WriteBlocking((LPUART_Type*)g_lpuartBaseAddr[UART_HOST], src, lenght);
}

static void init_spi(uint8_t instance)
{
	lpspi_master_config_t config;
	uint32_t baseAddr = g_lpspiBaseAddr[instance];

    /* Attach peripheral clock */
    CLOCK_SetClockDiv(kCLOCK_DivLPSPI0, 1u);
    CLOCK_AttachClk(kFRO12M_to_LPSPI0);

	LPSPI_MasterGetDefaultConfig(&config);

	config.cpol 				= s_spiUserConfig.polarity;
	config.cpha 				= s_spiUserConfig.phase;
	config.baudRate 			= s_spiUserConfig.baudRate_Bps;
	s_spiUserConfig.clock_Hz 	= CLOCK_GetLpspiClkFreq(0);

	LPSPI_MasterInit((LPSPI_Type *)baseAddr, &config, s_spiUserConfig.clock_Hz);
}

void send_spi_data(uint8_t *src, uint32_t writeLength)
{
    lpspi_transfer_t send_data = {0};
    uint32_t baseAddr = g_lpspiBaseAddr[LPSPI_INSTANCE];

    send_data.txData = src;
    send_data.dataSize = writeLength;
    send_data.rxData = NULL;
    send_data.configFlags = LPSPI_PCS_FOR_TRANSFER | kLPSPI_MasterPcsContinuous;

    LPSPI_MasterTransferBlocking((LPSPI_Type *)baseAddr, &send_data);
}

void receive_spi_data(uint8_t *dest, uint32_t readLength)
{
    lpspi_transfer_t receive_data = {0};
    uint32_t baseAddr = g_lpspiBaseAddr[LPSPI_INSTANCE];

    receive_data.rxData = dest;
    receive_data.dataSize = readLength;
    receive_data.txData = NULL;
    receive_data.configFlags = LPSPI_PCS_FOR_TRANSFER | kLPSPI_MasterPcsContinuous;

    LPSPI_MasterTransferBlocking((LPSPI_Type *)baseAddr, &receive_data);
}

void configure_spi_settings(lpspi_clock_polarity_t polarity,
							lpspi_clock_phase_t phase,
							lpspi_shift_direction_t direction)
{
    s_spiUserConfig.polarity = polarity;
    s_spiUserConfig.phase = phase;
    s_spiUserConfig.direction = direction;
}

static void init_i2c(uint8_t instance)
{
    uint32_t baseAddr = g_lpi2cBaseAddr[instance];
    lpi2c_master_config_t config;

    /* Attach peripheral clock */
    CLOCK_SetClockDiv(kCLOCK_DivLPI2C3, 1u);
    CLOCK_AttachClk(kFRO12M_to_LPI2C3);

    LPI2C_MasterGetDefaultConfig(&config);

    LPI2C_MasterInit((LPI2C_Type *)baseAddr, &config, CLOCK_GetLpi2cClkFreq(3u));
}

void deinit_i2c(uint8_t instance)
{
    uint32_t baseAddr = g_lpi2cBaseAddr[instance];
    LPI2C_MasterDeinit((LPI2C_Type *)baseAddr);
}

status_t send_i2c_data(uint8_t *src, uint32_t writeLength)
{
    lpi2c_master_transfer_t send_data = {0};
    uint32_t baseAddr 		= g_lpi2cBaseAddr[I2C_INSTANCE];

    send_data.slaveAddress 	= s_i2cUserConfig.slaveAddress;
    send_data.direction 	= kLPI2C_Write;
    send_data.data 			= src;
    send_data.dataSize		= writeLength;

    if (LPI2C_MasterTransferBlocking((LPI2C_Type *)baseAddr, &send_data) != kStatus_Success)
    {
        deinit_i2c(I2C_INSTANCE);
        init_i2c(I2C_INSTANCE);
        return kStatus_Fail;
    }

    return kStatus_Success;
}

status_t receive_i2c_data(uint8_t *dest, uint32_t readLength)
{
    lpi2c_master_transfer_t receive_data = {0};
    uint32_t baseAddr 			= g_lpi2cBaseAddr[I2C_INSTANCE];
    receive_data.slaveAddress 	= s_i2cUserConfig.slaveAddress;
    receive_data.direction 		= kLPI2C_Read;
    receive_data.data 			= dest;
    receive_data.dataSize 		= readLength;

    if (LPI2C_MasterTransferBlocking((LPI2C_Type *)baseAddr, &receive_data) != kStatus_Success)
    {
        deinit_i2c(I2C_INSTANCE);
        init_i2c(I2C_INSTANCE);
        return kStatus_Fail;
    }

    return kStatus_Success;
}
